Removed unneccessary stuff from layout.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 	<meta http-equiv="imagetoolbar" content="no" />
 	<meta name="MSSmartTagsPreventParsing" content="true" />
 
-  <title>Shopify Application</title>
+  <title>Billify</title>
 
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'prototype' %>
@@ -14,7 +14,7 @@
 <body>
   
   <div id="header">
-    <h1><%= link_to 'Shopify Demo Application', '/' %></h1>      
+    <h1><%= link_to 'Billify', '/' %></h1>      
     
     <p id="login-link">  
       <% if current_shop %>
