--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
   <title><%= APP_NAME %></title>
 
   <%= stylesheet_link_tag 'application' %>
-  <%= javascript_include_tag 'prototype' %>
+  <%= javascript_include_tag :defaults %>
+  
+  <%= javascript_include_tag 'markitup/jquery.markitup.pack.js', 'markitup/sets/html/set.js' %>
+  <%= stylesheet_link_tag '/javascripts/markitup/skins/markitup/style.css', '/javascripts/markitup/sets/html/style.css' %> 
 </head>
 	
 <body>
