Fixed the layout and cleaned the structure a bit.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
   <div id="container" class="clearfix">
     
     <ul id="tabs">
-      <%= tab :index, {:controller => 'home'}, :label => 'Orders' %>
-      <%= tab :design, {:controller => 'home', :action => 'design'}, :label => 'Templates' %>
+      <%= tab :index, {:controller => 'orders'}, :label => "Orders" %>
+      <%= tab :index, {:controller => 'print_templates'}, :label => "Templates" %>
     </ul>
   
     <!-- Flash error & notice-->
