--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -13,3 +13,7 @@
   </p>
   <%= submit_tag 'Authenticate' %>
 <% end %>
+
+<script type="text/javascript">
+   $(":text:visible:enabled:first").focus();
+</script>
