Added/copied money functionality from Shopify: * added default attribute to printing_template for remembering the last printed ones * extended some ActiveResources to allow rendering to_liquid

--- a/db/printing/invoice.liquid
+++ b/db/printing/invoice.liquid
@@ -12,8 +12,8 @@ Thank you for your business.
   <p>Invoice: {{ name }}</p
   <p>Credit Card: {{ payment.card_number }}</p>
   
-  {% if note_body %}
-    <p>Description: {{ note_body }}</p>
+  {% if note %}
+    <p>Description: {{ note }}</p>
   {% endif %}
 </div>
 
