--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,7 @@
 <% title "Your orders", :description => "You can print orders or save them as a PDF file using different templates"%>
 
 <div id="sidebar">
+  <%= render :partial => 'print_templates/select_template', :locals => {:tmpls => @tmpls} %>
 </div>
 
 <div class="itemlist">
@@ -15,11 +16,11 @@
       <li>
         <div class="order box" onmouseover="$('#<%= "print-#{dom_id(order)}" %>').show();" onmouseout="$('#<%= "print-#{dom_id(order)}" %>').hide();">
           <div class="wrapper">
-            <strong><%= link_to order.name, "http://#{current_shop.url}/admin/orders/#{order.id}" %></strong>
+            <strong><%= link_to order.name, :action => 'show', :id => order %></strong>
             <span class="price"><%= order.total_price %> <%= order.currency %></span>
             <span class="highlight"><%= order.financial_status %></span>
             by <span class="note"><%= order.billing_address.name %></span>
-            <%= link_to "Print", {:controller => 'print_templates', :action => 'preview', :order_id => order.id}, :class => 'side-link action', :id => "print-#{dom_id(order)}" %>          
+            <%= link_to "Print", {:controller => 'print', :action => 'preview', :order_id => order.id}, :class => 'side-link action', :id => "print-#{dom_id(order)}", :onclick => %[if ($("#selected-templates :radio:checked").length == 0) { alert("Please select a template to print first."); return false } else { var template_id = $("#selected-templates :radio:checked")[0].value; $("#print-#{dom_id(order)}")[0].href += "&template_id=" + template_id; return true }] %>          
           </div>
         </div>
       </li>
