Added help links to template editing section and more: * some CSS "repairing" of mark-it-up editor * Prepared print preview javascript on show order screen

--- a/app/views/orders/_preview.html.erb
+++ b/app/views/orders/_preview.html.erb
@@ -1,3 +1,5 @@
-<% content_tag :div, :class => "preview", :id => "template-preview-#{tmpl.id}" do %>
-  <%= rendered_template %>
+<% content_tag :div, :id => "template-preview-#{tmpl.id}" do %>
+  <div class="template-preview">
+    <%= rendered_template %>
+  </div>
 <% end %>
