--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag :defaults %>
   
-  <%= javascript_include_tag 'markitup/jquery.markitup.pack.js', 'markitup/sets/html/set.js' %>
+  <%= javascript_include_tag 'markitup/jquery.markitup.pack', 'markitup/sets/html/set', 'jquery.qtip.pack' %>
   <%= stylesheet_link_tag '/javascripts/markitup/skins/markitup/style.css', '/javascripts/markitup/sets/html/style.css' %> 
 </head>
 	
