--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag :defaults %>
   
-  <%= javascript_include_tag 'markitup/jquery.markitup.pack', 'markitup/sets/html/set', 'jquery.qtip.pack' %>
-  <%= stylesheet_link_tag '/javascripts/markitup/skins/markitup/style.css', '/javascripts/markitup/sets/html/style.css' %> 
+  <%= javascript_include_tag 'markitup/jquery.markitup.pack', 'markitup/sets/html/set', 'jquery.qtip.pack', 'jquery.colorbox.min' %>
+  <%= stylesheet_link_tag '/javascripts/markitup/skins/markitup/style.css', '/javascripts/markitup/sets/html/style.css', 'colorbox', 'colorbox-custom', 'colorbox-custom-ie' %> 
 </head>
 	
 <body>
