--- a/app/views/print_templates/_form.html.erb
+++ b/app/views/print_templates/_form.html.erb
@@ -1,16 +1,30 @@
 <% nav_link :action => 'index' %>
 
 <div id="sidebar">
-  <h4>Help</h4>
+  <h3>Help</h3>
+  Use HTML, CSS and Liquid to customize your templates. The editor can assist you with the syntax:
+  <dl>
+    <dt>Ctrl + “Key”</dt>
+    <dd>Trigger the corresponding button. Hover over a symbol to view the keyboard shortcut.</dt>
+
+    <dt>Tab<dt>
+    <dd>Move out of the current tag. Try it after you have inserted something with a button.</dd>
+    
+    <dt>Ctrl + Click on a button<dt>
+    <dd>Trigger the corresponding button and get the selection back. Helpful when you have selected some text.</dd>
+  </dl>
+
+  <h3>Learn more</h3>
   <ul>
-  <li><%= link_to "How does the template language work?", "http://wiki.shopify.com/Liquid", :class => "action", :target => "wiki" %></li>
-  <li><%= link_to "What variables can I use?", "http://wiki.shopify.com/Order", :class => "action", :target => "wiki" %></li>
+    <li><%= link_to "Basics of the Liquid template language", "http://wiki.shopify.com/Liquid", :class => "action", :target => "wiki" %></li>
+    <li><%= link_to "Liquid variables you can use", "http://wiki.shopify.com/Order", :class => "action", :target => "wiki" %></li>
+    <li><%= link_to "HTML and CSS", "http://htmldog.com", :class => "action", :target => "web" %></li>
   </ul>
 </div>
 
 <%= error_messages_for 'tmpl', :object_name => 'template' %>
 
-<% form_for(tmpl, :method => method) do |f| %>
+<% form_for(tmpl, :method => method, :html => {:id => "print_template_form"}) do |f| %>
   <div class="header">
     <%= f.label :name, "Name:" %>
     <%= f.text_field :name %>
@@ -18,9 +32,11 @@
   
   <%= f.text_area :body, :id => "html-editor", :cols => 80, :rows => 20 %>
   
-  <%= f.submit (method.to_s == 'post' ? 'Create' : 'Update') %>
-  <%# TODO: fix URL, somehow it didn't work with :url => {:action => 'show', :id => tmpl} or :url => tmpl %>
-  or <%= link_to "Preview", "/print_templates/show/#{tmpl.id}", :id => "preview-link" %>
+  <div id="main-buttons">
+    <%= f.submit(method.to_s == 'post' ? 'Create' : 'Update') %>
+    or <%= preview_link %>
+  </div>
+  <%= preview_status %>
 <% end %>
 
 <script type="text/javascript">
@@ -30,7 +46,5 @@
     <% if method == 'post' %>
       $(":text:visible:enabled:first").focus().select();
     <% end %>
-    
-    $("#preview-link").colorbox({fixedWidth: "60%", fixedHeight: "60%", transition: "150"});
   });
 </script>
