--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
 <% nav_link :action => 'index' %>
-<% nav_link(@order.url, "Show details", :title => "Open order in Shopify admin interface") %>
+<% nav_link(@order.url, "View original order", :title => "Open order in Shopify admin interface") %>
 
 <div id="sidebar">
   <h4>Select the template you want to print:</h4>
