--- a/app/views/print_templates/index.html.erb
+++ b/app/views/print_templates/index.html.erb
@@ -18,7 +18,7 @@
           <% content_tag :span, :id => "#{dom_id(tmpl)}-actions", :class => "side-link" do %>
             <%= link_to "Edit", {:action => 'edit', :id => tmpl}, :class => 'action' %> |
             <%= link_to "Duplicate", {:action => 'new', :id => tmpl.id}, :class => 'action', :title => "Copy the contents of this template into a new one you can edit" %> |
-            <%= preview_link(tmpl.id, nil, :html => {:class => 'action preview-link'}, :title => tmpl.name) %>
+            <%= preview_link(tmpl.id, nil, :html => {:class => 'action preview-link'}, :title => tmpl.name, :templates => @tmpls) %>
           <% end %>
         </div>
       </li>
