--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
   <%= javascript_include_tag :defaults %>
   
-  <%= javascript_include_tag 'markitup/jquery.markitup.pack', 'markitup/sets/html/set', 'facebox' %>
+  <%= javascript_include_tag 'markitup/jquery.markitup.pack', 'markitup/sets/html/set', 'facebox', 'jquery.center' %>
   <%= stylesheet_link_tag '/javascripts/markitup/skins/markitup/style.css', '/javascripts/markitup/sets/html/style.css', 'facebox' %>
 </head>
 	
