--- a/app/views/print_templates/edit.html.erb
+++ b/app/views/print_templates/edit.html.erb
@@ -1,3 +1,3 @@
 <% title "Edit a template", :description => "Change the name or the content of a template" %>
 
-<%= render :partial => 'form', :locals => {:tmpl => @tmpl, :method => 'put'} %>
+<%= render :partial => 'form', :locals => {:tmpl => @tmpl, :method => 'put', :all_templates => @tmpls} %>
