--- a/app/views/print_templates/new.html.erb
+++ b/app/views/print_templates/new.html.erb
@@ -1,3 +1,3 @@
 <% title "Create new template", :description => "Design your printing template using HTML and optionally inline CSS. Liquid variables are used to insert data from your orders." %>
 
-<%= render :partial => 'form', :locals => {:tmpl => @tmpl, :method => 'post'} %>
+<%= render :partial => 'form', :locals => {:tmpl => @tmpl, :method => 'post', :all_templates => @tmpls} %>
